Up resources API
