# testSmPlaces/app/Http/Requests/StoreUpdateBook.php
@@ -1,0 +1,32 @@
+<?php
+
+namespace App\Http\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class StoreUpdateBook extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     *
+     * @return bool
+     */
+    public function authorize()
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array
+     */
+    public function rules()
+    {
+        return [
+            'title' => ['required', 'min:2', 'max:255'],
+            'author' => ['required', 'min:2', 'max:255'],
+            'type_interest_id' => ['required', 'integer']
+        ];
+    }
+}
